creando html seccion compra

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="main__posicionamiento">
                 
-                <a href="">
+                <a href="./pages/compra.html">
                     <div class="main__contenedor__producto">
                         <img class= "main__productos" src="public/productomasvendido1.jpg" alt="Tarjeta de Video RTX2060 MSI Ventus">
                         <div class="main__productos__texto">
