--- a/pages/compra.html
+++ b/pages/compra.html
@@ -81,6 +81,12 @@
                     <div>
                         <p class="main__adicional__compra">Envio gratis</p>
                     </div>
+
+                    
+                    <div class="main__boton">
+                        <a class="main__boton__estilo" href="">Agregar al carrito</a>
+                    </div>
+                    
                 </div>
             </section>
     </main> <!--Final del main-->
