--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 
 
-<body class="posicionamiento">
+<body>
     <Header class="header"><!--Comienzo del header-->
-        <div class="header__barra__mobile">
+        <div>
             <div class="header__barra">
                 <p class="no-margin"> 
                     <a class="header__logo" href="index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
