terminando agregar bootstrap

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,7 +42,7 @@
                       <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link pag__actual" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                           </li>
                           <li class="nav-item dropdown ">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,7 +61,7 @@
                         </li>
     
                         <li class="nav-item">
-                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            <a class="nav-link  pag__actual" href="./nosotros.html">Nosotros</a>
                         </li>
                         
                         <li class="nav-item">
@@ -110,6 +110,9 @@
                 <h2> </h2>
             </div>
         </div>
+        <a href="./contacto.html" class="d-flex justify-content-center m-4">
+            <button type="button" class="btn btn-outline-dark">Contactanos</button>
+        </a>
     </main> <!--Final del main-->
 
     <footer class="footer"> <!--Comienzo del footer-->
