--- a/pages/producto.html
+++ b/pages/producto.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                           </li>
                           <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle" href="." role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle pag__actual" href="." role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Productos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
