--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
             <div>
                 <div class="header__barra">
                     <p class="no-margin"> 
-                        <a class="header__logo" href="index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
+                        <a class="header__logo" href="../index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
                     </p>
                     <form  class="header__form" action="">
                         <input class="header__form__label" type="text" name="search" placeholder="Buscar" >
@@ -45,8 +45,8 @@
                             Productos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="./producto.html">Electrodomesticos</a></li>
-                            <li><a class="dropdown-item" href="./producto.html">Computacion</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Electrodomésticos</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Computación</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Celulares</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Accesorios</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Televisores</a></li>
@@ -76,7 +76,7 @@
             <div class="header__banner black">
                 <div class="contenedor__banner__texto">
                 <h1 class="header__banner__texto">TECHSTORE</h1>
-                <h2 class="header__banner__subtitulo">Mas de 5 años dandondete los mejores precios</h2>
+                <h2 class="header__banner__subtitulo">Más de 5 años dandondete los mejores precios</h2>
                 </div>
             </div> 
         </Header><!--Final del header-->
@@ -92,23 +92,27 @@
                         <form class="form" action="">
                             <div class="mb-3">
                                 <label for="validationCustom01" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="validationCustom01" value="Tu Nombre" required>
+                                <input type="text" class="form-control" id="validationCustom01" value="Tú Nombre" required>
                             </div>
 
                             <div class="mb-3">    
                                 <label for="validationCustom01" class="form-label">Apellido</label>
-                                <input type="text" class="form-control" id="validationCustom01" value="Tu Apellido" required>
+                                <input type="text" class="form-control" id="validationCustom01" value="Tú Apellido" required>
                             </div>
                             
                             <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Direccion Email</label>
+                                <label for="exampleFormControlInput1" class="form-label">Dirección Email</label>
                                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="username@ejemplo.com">
                             </div>
 
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Dejanos Tu Mensaje</label>
+                                <label for="exampleFormControlTextarea1" class="form-label">Dejanos Tú Mensaje</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
+
+                            <a href="" class="d-flex justify-content-center m-4">
+                                <button type="button" class="btn btn-outline-dark">Enviar</button>
+                            </a>
                         </form>
 
                      </div>
@@ -121,9 +125,9 @@
             <div class="footer__link">
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Politica y Privacidad</a>
+                    <a class="footer__a" href="">Política y Privacidad</a>
                     <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Politicas de Calidad</a>
+                    <a class="footer__a" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">AYUDA</h3>
@@ -137,17 +141,17 @@
                 <form class="form" action="">
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Nombre:</label>
-                        <input class="form__input" type="text" id="nombre" placeholder="Tu nombre">
+                        <input class="form__input" type="text" id="nombre" placeholder="Tú nombre">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="apellido">Apellido:</label>
-                        <input class="form__input" type="text" id="apellido" placeholder="Tu apellido">
+                        <input class="form__input" type="text" id="apellido" placeholder="Tú apellido">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Email:</label>
-                        <input class="form__input" type="text" id="email" placeholder="Tu Email">
+                        <input class="form__input" type="text" id="email" placeholder="Tú Email">
                     </div>
 
                     <div class="form__boton">
