--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,7 +27,7 @@
             <div>
                 <div class="header__barra">
                     <p class="no-margin"> 
-                        <a class="header__logo" href="index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
+                        <a class="header__logo" href="../index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
                     </p>
                     <form  class="header__form" action="">
                         <input class="header__form__label" type="text" name="search" placeholder="Buscar" >
@@ -49,8 +49,8 @@
                             Productos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="./producto.html">Electrodomesticos</a></li>
-                            <li><a class="dropdown-item" href="./producto.html">Computacion</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Electrodomésticos</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Computación</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Celulares</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Accesorios</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Televisores</a></li>
@@ -80,7 +80,7 @@
             <div class="header__banner black">
                 <div class="contenedor__banner__texto">
                 <h1 class="header__banner__texto">TECHSTORE</h1>
-                <h2 class="header__banner__subtitulo">Mas de 5 años dandondete los mejores precios</h2>
+                <h2 class="header__banner__subtitulo">Más de 5 años dandondete los mejores precios</h2>
                 </div>
             </div> 
         </Header><!--Final del header-->
@@ -99,12 +99,15 @@
         
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a ante eu arcu varius congue eget vel ex. Donec accumsan turpis nec aliquet commodo. Sed vel eros sed mi viverra efficitur sed et orci. Proin ornare sollicitudin metus, a tincidunt justo blandit tempus. Aliquam eu felis ut erat condimentum vehicula. Etiam magna dolor, lacinia nec interdum non, consectetur vitae sem. Proin dapibus risus ut leo ornare, eu molestie ex dignissim. Phasellus et fringilla mauris, sed placerat nunc. Mauris eu convallis sapien, eget aliquet ipsum. Nulla facilisi. Suspendisse et nisl a dolor interdum euismod. Vivamus ut sagittis turpis. Etiam sollicitudin odio ut ultricies ornare.
-                    Curabitur vel sagittis neque, a aliquam leo. Nam dignissim elit erat, sed semper dui dictum sed. Pellentesque et efficitur metus. Sed eget dignissim lorem. Aenean quis tortor vel nunc dapibus maximus. Sed molestie scelerisque fermentum. Integer a vehicula dolor. Nunc ornare velit nec vulputate eleifend.
-                    Sed porta aliquet est, ut pulvinar nisi feugiat eget. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer id fermentum libero, vitae posuere ligula. Vestibulum ultrices ultrices turpis nec luctus. Maecenas gravida, est sed lacinia elementum, neque ligula efficitur felis, non aliquet risus metus et mauris. 
+                    Somos Tech Store, una empresa creada en 2017 dedicada a la venta de productos tecnológicos. Desde ese momento  nos hemos hecho conocidos por vender productos de la malta calidad, brindar un servicio de atención al cliente de alta calidad  y un rápido sistema de envíos. Siendo reconocidos por distinguidas marcas como lo son, Lenovo, Logitech, Samsung y Ryzen.
+
                 </p>
                 <p>
-                    Vivamus euismod eros id quam sollicitudin, sed faucibus neque tempor. Nullam consequat quam sit amet lacinia ornare. Morbi tincidunt ullamcorper libero, id volutpat metus ullamcorper sit amet. Nunc nisl nisi, placerat at nibh id, hendrerit tempor libero. Vivamus mattis facilisis sem, non faucibus est sodales a. Etiam leo mi, sollicitudin eget fringilla non, bibendum ac sapien. Curabitur laoreet dui ac velit faucibus dapibus.</p>
+                    Contamos con 5 locales distribuidos en diferentes localidades de Buenos Aires, con más de 100 empleados
+                </p>
+                
+                <p>
+                    Nuestro objetivo es crear una marca que sea reconocida internacionalmente, la cual sea tu primera opción a la hora de querer comprar algún producto dedicado a la tecnología.
                 </p>
                 <p class="firma no-margin">Techstore.</p>
                 <h2> </h2>
@@ -120,9 +123,9 @@
             <div class="footer__link">
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Politica y Privacidad</a>
+                    <a class="footer__a" href="">Política y Privacidad</a>
                     <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Politicas de Calidad</a>
+                    <a class="footer__a" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">AYUDA</h3>
@@ -136,17 +139,17 @@
                 <form class="form" action="">
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Nombre:</label>
-                        <input class="form__input" type="text" id="nombre" placeholder="Tu nombre">
+                        <input class="form__input" type="text" id="nombre" placeholder="Tú nombre">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="apellido">Apellido:</label>
-                        <input class="form__input" type="text" id="apellido" placeholder="Tu apellido">
+                        <input class="form__input" type="text" id="apellido" placeholder="Tú apellido">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Email:</label>
-                        <input class="form__input" type="text" id="email" placeholder="Tu Email">
+                        <input class="form__input" type="text" id="email" placeholder="Tú Email">
                     </div>
 
                     <div class="form__boton">
