--- a/pages/ofertas2.html
+++ b/pages/ofertas2.html
@@ -27,7 +27,7 @@
             <div>
                 <div class="header__barra">
                     <p class="no-margin"> 
-                        <a class="header__logo" href="index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
+                        <a class="header__logo" href="../index.html">TECH<span class="header__estilo__logo">STORE</span></a> <!--El span es para aplicarle un estilo diferente-->
                     </p>
                     <form  class="header__form" action="">
                         <input class="header__form__label" type="text" name="search" placeholder="Buscar" >
@@ -49,8 +49,8 @@
                             Productos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="./producto.html">Electrodomesticos</a></li>
-                            <li><a class="dropdown-item" href="./producto.html">Computacion</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Electrodomésticos</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Computación</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Celulares</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Accesorios</a></li>
                             <li><a class="dropdown-item" href="./producto.html">Televisores</a></li>
@@ -80,7 +80,7 @@
             <div class="header__banner black">
                 <div class="contenedor__banner__texto">
                 <h1 class="header__banner__texto">TECHSTORE</h1>
-                <h2 class="header__banner__subtitulo">Mas de 5 años dandondete los mejores precios</h2>
+                <h2 class="header__banner__subtitulo">Más de 5 años dandondete los mejores precios</h2>
                 </div>
             </div> 
         </Header><!--Final del header-->
@@ -175,9 +175,9 @@
             <div class="footer__link">
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Politica y Privacidad</a>
+                    <a class="footer__a" href="">Política y Privacidad</a>
                     <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Politicas de Calidad</a>
+                    <a class="footer__a" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
                     <h3 class="footer__seccion__titulo">AYUDA</h3>
@@ -191,17 +191,17 @@
                 <form class="form" action="">
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Nombre:</label>
-                        <input class="form__input" type="text" id="nombre" placeholder="Tu nombre">
+                        <input class="form__input" type="text" id="nombre" placeholder="Tú nombre">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="apellido">Apellido:</label>
-                        <input class="form__input" type="text" id="apellido" placeholder="Tu apellido">
+                        <input class="form__input" type="text" id="apellido" placeholder="Tú apellido">
                     </div>
 
                     <div class="form__campo">
                         <label class="form__label" for="nombre">Email:</label>
-                        <input class="form__input" type="text" id="email" placeholder="Tu Email">
+                        <input class="form__input" type="text" id="email" placeholder="Tú Email">
                     </div>
 
                     <div class="form__boton">
