--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -99,7 +99,7 @@
         
             <div>
                 <p>
-                    Somos Tech Store, una empresa creada en 2017 dedicada a la venta de productos tecnológicos. Desde ese momento  nos hemos hecho conocidos por vender productos de la malta calidad, brindar un servicio de atención al cliente de alta calidad  y un rápido sistema de envíos. Siendo reconocidos por distinguidas marcas como lo son, Lenovo, Logitech, Samsung y Ryzen.
+                    Somos Tech Store, una empresa creada en 2017 dedicada a la venta de productos tecnológicos. Desde ese momento nos hemos hecho conocidos por vender productos de la más alta calidad, brindar un servicio de atención al cliente de alta calidad  y un rápido sistema de envíos. Siendo reconocidos por distinguidas marcas como lo son, Lenovo, Logitech, Samsung y Ryzen.
 
                 </p>
                 <p>
