--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,7 +27,7 @@
                     </p>
                     <form  class="header__form" action="">
                         <input class="header__form__label" type="text" name="search" placeholder="Buscar" >
-                        <input class="header__form__input" type="submit" value="Buscar">
+                        <input class="boton-secundario" type="submit" value="Buscar">
                     </form>
                 </div> <!--No se si una barra de busqueda se haga con un form pero lo puse para visualizar como seria-->
                 <nav class="navbar navbar-expand-lg header__barra__navegacion">
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="form__boton">
-                        <input class="boton" type="submit" value="Suscribite">
+                        <input class="boton-primario" type="submit" value="Suscribite">
                     </div>
                 </form>
                 
