--- a/pages/compra.html
+++ b/pages/compra.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>TECHSTORE</title>
 
-    <!--Links css -->
+                         <!-- keywords -->
+    <meta name="keywords" content="Techstore, Venta de productos tegnologicos, Ryzen, Logitech, Samsung, lenovo, Buenos Aires, Ofertas, Envio a todo el país, Compra de producto, Informacion detallada,
+    Stock Disponible, Envio gratis">
+    <meta name="description" content="Somos Techstore una empresa dedicada a la venta de productos tecnológicos. Venta e informacion detallada del producto">
+
+    <title>TECHSTORE || Compra de producto</title>
+
+                        <!--Links css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 
