--- a/pages/ofertas2.html
+++ b/pages/ofertas2.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>TECHSTORE</title>
 
-    <!--Link css -->
+                            <!-- keywords -->
+    <meta name="keywords" content="Techstore, Venta de productos tegnologicos, Ryzen, Logitech, Samsung, lenovo, Buenos Aires, Ofertas, Envio a todo el país, Descuento">
+    <meta name="description" content="Somos Techstore una empresa dedicada a la venta de productos tecnológicos. Mira nuestras ofertas">
+
+    <title>TECHSTORE || Ofertas</title>
+
+                            <!--Link css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 
-                        <!--FONTS-->
+                            <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
