--- a/pages/productos2.html
+++ b/pages/productos2.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+                         <!-- keywords -->
+    <meta name="keywords" content="Techstore, Venta de productos tegnologicos, Ryzen, Logitech, Samsung, lenovo, Buenos Aires, Ofertas, Envio a todo el país, Ver productos, Electrodomesticos, Celulares, Computación, Accesorios, Televisores">
+    <meta name="description" content="Somos Techstore una empresa dedicada a la venta de productos tecnológicos. Mira nuestros productos">
+
     <title>TECHSTORE</title>
 
     <!--Link css -->
