--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="header__banner black">
             <div class="contenedor__banner__texto">
-            <h1 class="header__banner__texto">TECHSTORE</h1>
+            <h1 class="header__banner__texto text-h1">TECHSTORE</h1>
             <h2 class="header__banner__subtitulo">Más de 5 años dandondete los mejores precios</h2>
             </div>
         </div> 
@@ -216,7 +216,7 @@
                                 <span>
                                     <img class="categoria" src="./public/iconoauri.png" alt="Accesorios">
                                 </span>
-                                <span>
+                                <span class="text-categorias">
                                     Accesorios
                                 </span>
                             </a>
@@ -227,7 +227,7 @@
                                 <span>
                                     <img class="categoria" src="./public/iconotv.png" alt="Televisores">
                                 </span>
-                                <span>
+                                <span class="text-categorias">
                                     Televisores
                                 </span>
                             </a>
@@ -238,7 +238,7 @@
                                 <span>
                                     <img class="categoria" src="./public/iconoelec.png" alt="Electrodomesticos">
                                 </span>
-                                <span>
+                                <span class="text-categorias">
                                     Electrodomésticos
                                 </span>
                             </a>
@@ -249,7 +249,7 @@
                                 <span>
                                     <img class="categoria" src="./public/iconocomp.png" alt="Computación">
                                 </span>
-                                <span>
+                                <span class="text-categorias">
                                     Computacion
                                 </span>
                             </a>
@@ -259,7 +259,7 @@
                                 <span>
                                     <img class="categoria" src="./public/iconocel.png" alt="Celulares">
                                 </span>
-                                <span>
+                                <span class="text-categorias">
                                     Celulares
                                 </span>
                             </a>
@@ -272,16 +272,16 @@
     <footer class="footer"> <!--Comienzo del footer-->
         <div class="footer__posicionamiento">
             <div class="footer__link">
-                <div class="footer__seccion">
+                <div class="footer__seccion text-footer">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Política y Privacidad</a>
-                    <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Políticas de Calidad</a>
+                    <a class="footer__a text-footer" href="">Política y Privacidad</a>
+                    <a class="footer__a text-footer" href="">Terminos y Condiciones</a>
+                    <a class="footer__a text-footer" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
-                    <h3 class="footer__seccion__titulo">AYUDA</h3>
-                    <a class="footer__a" href="">Preguntas Frecuentes</a>
-                    <a class="footer__a" href="">Sucursales</a>
+                    <h3 class="footer__seccion__titulo text-footer">AYUDA</h3>
+                    <a class="footer__a text-footer" href="">Preguntas Frecuentes</a>
+                    <a class="footer__a text-footer" href="">Sucursales</a>
                 </div>
             </div>
             
