--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -85,7 +85,7 @@
             </div>
             <div class="header__banner black">
                 <div class="contenedor__banner__texto">
-                <h1 class="header__banner__texto">TECHSTORE</h1>
+                <h1 class="header__banner__texto text-h1">TECHSTORE</h1>
                 <h2 class="header__banner__subtitulo">Más de 5 años dandondete los mejores precios</h2>
                 </div>
             </div> 
@@ -127,18 +127,19 @@
     <footer class="footer"> <!--Comienzo del footer-->
         <div class="footer__posicionamiento">
             <div class="footer__link">
-                <div class="footer__seccion">
+                <div class="footer__seccion text-footer">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Política y Privacidad</a>
-                    <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Políticas de Calidad</a>
+                    <a class="footer__a text-footer" href="">Política y Privacidad</a>
+                    <a class="footer__a text-footer" href="">Terminos y Condiciones</a>
+                    <a class="footer__a text-footer" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
-                    <h3 class="footer__seccion__titulo">AYUDA</h3>
-                    <a class="footer__a" href="">Preguntas Frecuentes</a>
-                    <a class="footer__a" href="">Sucursales</a>
+                    <h3 class="footer__seccion__titulo text-footer">AYUDA</h3>
+                    <a class="footer__a text-footer" href="">Preguntas Frecuentes</a>
+                    <a class="footer__a text-footer" href="">Sucursales</a>
                 </div>
             </div>
+            
             
             <div class="footer__contenedor__newsletter">
                 <h3 class="footer__seccion__titulo__newsletter">Registrate a nuestro newsletter</h3>
