--- a/pages/compra.html
+++ b/pages/compra.html
@@ -129,18 +129,19 @@
     <footer class="footer"> <!--Comienzo del footer-->
         <div class="footer__posicionamiento">
             <div class="footer__link">
-                <div class="footer__seccion">
+                <div class="footer__seccion text-footer">
                     <h3 class="footer__seccion__titulo">TECHSTORE</h3>
-                    <a class="footer__a" href="">Política y Privacidad</a>
-                    <a class="footer__a" href="">Terminos y Condiciones</a>
-                    <a class="footer__a" href="">Políticas de Calidad</a>
+                    <a class="footer__a text-footer" href="">Política y Privacidad</a>
+                    <a class="footer__a text-footer" href="">Terminos y Condiciones</a>
+                    <a class="footer__a text-footer" href="">Políticas de Calidad</a>
                 </div>
                 <div class="footer__seccion">
-                    <h3 class="footer__seccion__titulo">AYUDA</h3>
-                    <a class="footer__a" href="">Preguntas Frecuentes</a>
-                    <a class="footer__a" href="">Sucursales</a>
+                    <h3 class="footer__seccion__titulo text-footer">AYUDA</h3>
+                    <a class="footer__a text-footer" href="">Preguntas Frecuentes</a>
+                    <a class="footer__a text-footer" href="">Sucursales</a>
                 </div>
             </div>
+            
             
             <div class="footer__contenedor__newsletter">
                 <h3 class="footer__seccion__titulo__newsletter">Registrate a nuestro newsletter</h3>
