--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -103,7 +103,7 @@
             <img class="main__local__imagen" src="../public/local.jpg" alt="local">
         
         
-            <div>
+            <div class="main__nosotros__texto">
                 <p>
                     Somos Tech Store, una empresa creada en 2017 dedicada a la venta de productos tecnológicos. Desde ese momento nos hemos hecho conocidos por vender productos de la más alta calidad, brindar un servicio de atención al cliente de alta calidad  y un rápido sistema de envíos. Siendo reconocidos por distinguidas marcas como lo son, Lenovo, Logitech, Samsung y Ryzen.
 
