--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </a>
                         
                         
-                        <a href="">
+                        <a href="./pages/compra2.html">
                             <div class="main__contenedor__producto">
                                 <img class= "main__productos" src="public/productomasvendido2.jpg" alt="Teclado Redragon KUMARA K552 RGB">
                                 <div class="main__productos__texto">
