--- a/pages/compra4.html
+++ b/pages/compra4.html
@@ -86,16 +86,16 @@
     <main><!--comienzo del main-->
             <section class="main__posicionamiento__compra">
                 <div data-aos="fade-right" data-aos-offset="300" data-aos-duration="700" data-aos-easing="ease-in-sine">
-                    <img class="main__imagen__compra" src="../public/productomasvendido2.jpg" alt="Teclado Redragon KUMARA K552 RGB">
+                    <img class="main__imagen__compra" src="../public/productomasvendido4.jpg" alt="Auriculares Apple AirPods">
                 </div>
 
                 <div data-aos="fade-left" data-aos-offset="300" data-aos-duration="700" data-aos-easing="ease-in-sine" class="main__informacion__compra">
                     <div class="main__titulo__compra">
-                        <h2>Teclado Redragon KUMARA K552 RGB</h2>
+                        <h2>Auriculares Apple AirPods</h2>
                     </div>
 
                     <div>
-                        <p class="main__texto__compra">Precio:<span class="main__precio__compra">$6.000</span></p>
+                        <p class="main__texto__compra">Precio:<span class="main__precio__compra">$50.000</span></p>
 
                     <div>
                         <form action="">
@@ -131,69 +131,22 @@
                 <table class="main__tabla__compra">
                     <tbody>
                         <tr>
-                            <th class="main_tabla_th_compra">TIPO DE TECLADO</th>
-                            <td class="main_tabla_td_compra">Mecánico</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">TECLAS MULTIMEDIA</th>
-                            <td class="main_tabla_td_compra">Sí, a través de tecla FN</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">BLOQUEO DE TECLA WINDOWS</th>
+                            <th class="main_tabla_th_compra">MICRÓFONO</th>
                             <td class="main_tabla_td_compra">Sí</td>
                         </tr>
                         <tr>
-                            <th class="main_tabla_th_compra">REPOSAMUÑECAS</th>
+                            <th class="main_tabla_th_compra">TIPO DE USO</th>
+                            <td class="main_tabla_td_compra">In ear</td>
+                        </tr>
+                        <tr>
+                            <th class="main_tabla_th_compra">CONECTIVIDAD</th>
+                            <td class="main_tabla_td_compra">Bluetooth</td>
+                        </tr>
+                        <tr>
+                            <th class="main_tabla_th_compra">DEPORTIVO</th>
                             <td class="main_tabla_td_compra">No</td>
                         </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">CABLE</th>
-                            <td class="main_tabla_td_compra">Goma, reforzado. Soporta 12 kg y 10000 flexiones. USB enchapado en oro y filtro anti interferencias</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">CONSTRUCCIÓN</th>
-                            <td class="main_tabla_td_compra">plástico ABS reforzado y placa de acero.</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">DISTRIBUCIÓN</th>
-                            <td class="main_tabla_td_compra">Disponible: español (Latinoamérica) | español (España)/td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">DIMENSIONES</th>
-                            <td class="main_tabla_td_compra">37,5 x 15,5 x 4,3 cm</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">SOFTWARE</th>
-                            <td class="main_tabla_td_compra">Sí</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">TIPO DE SWITCHES</th>
-                            <td class="main_tabla_td_compra">Redragon Blue</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">TECLAS MACRO DEDICADAS</th>
-                            <td class="main_tabla_td_compra">No</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">TAMAÑO</th>
-                            <td class="main_tabla_td_compra">Tenkeyless</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">RETROILUMINADO</th>
-                            <td class="main_tabla_td_compra">Sí, Iluminación RGB Chroma</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">MATRIZ</th>
-                            <td class="main_tabla_td_compra">100% anti-ghosting con full key rollover</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">ANTI SALPICADURAS</th>
-                            <td class="main_tabla_td_compra">Sí</td>
-                        </tr>
-                        <tr>
-                            <th class="main_tabla_th_compra">PESO</th>
-                            <td class="main_tabla_td_compra">1,06 kg</td>
-                        </tr>
+                       
                     </tbody>
                 </table>
             </section>
