--- a/pages/productos2.html
+++ b/pages/productos2.html
@@ -161,6 +161,24 @@
                         </div>
                     </a>
 
+                    <a href="">
+                        <div class="main__contenedor__producto">
+                            <img class= "main__productos" src="../public/mouse-logitech.jfif" alt="Mouse Logitech G Pro Hero">
+                            <div  class="main__productos__texto">
+                                <h4>Mouse Logitech G Pro Hero</h4>
+                                <h5>$ 5.300</h5>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="main__contenedor__producto">
+                            <img class= "main__productos" src="../public/logitech-teclado.jpg" alt="Teclado+Mouse Logitech INALÁMBRICOS MK295">
+                            <div  class="main__productos__texto">
+                                <h4>Teclado+Mouse Logitech INALÁMBRICOS MK295</h4>
+                                <h5>$ 6.800</h5>
+                            </div>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="d-flex justify-content-center">
