--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link pag__actual" aria-current="page" href="./index.html">Inicio</a>
                       </li>
                       <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="./pages/producto.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Productos
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
