--- a/pages/compra4.html
+++ b/pages/compra4.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-
+</head>    
 
 <body>
     <Header class="header"><!--Comienzo del header-->
